# fastapi-monolith-project-template

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
app/: main.py
app/api/: utils.py
app/api/routes/: example.py  ws.py
app/core/: allowed_host.py  config.py  logging.py  rate_limit.py
app/db/: models.py  session.py
cli/: commands.py
tests/: test_cors.html  test_example_route.py
